methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:3: error: illegal start of statement (no modifiers allowed here)
  override def run() {
  ^