methods.picture.PictureMono2.scala.code
override def run() {
  
  override def run() {
  
  def faireV() {
    avance(2);
    baisseBrosse();
    leveBrosse();
    
    avance();
    gauche();
    avance();
    baisseBrosse();
    leveBrosse();
    recule();
    droite();
    
    avance();
    baisseBrosse();
    leveBrosse();
    avance(2);
    gauche();
    
    
  }
  
  for(i<-0 to 3) {
    
  
 faireV;
  
  }
 
  
}
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
}